# DNANet

./: .gitattributes  .gitignore  README.md  config_io.py  create_paper_figures.py  cross_validate.py  evaluate.py  pyproject.toml  train.py  utils.py
DNAnet/: allele_callers.py  utils.py
DNAnet/data/: caching.py  split.py  utils.py
DNAnet/data/data_models/: __init__.py  base.py  dna_models.py  hid_dataset.py  hid_image.py
DNAnet/data/parsing/: __init__.py  parse_annotations.py  parse_raw_hid.py
DNAnet/evaluation/: __init__.py  utils.py  visualizations.py
DNAnet/evaluation/segmentation/: allele_metrics.py  pixel_metrics.py
DNAnet/models/: base.py  loss.py  prediction.py
DNAnet/models/segmentation/: human_analysis.py  trainable_unet.py  unet_architecture.py
config/data/: dnanet_rd.yaml
config/evaluation/: segmentation.yaml
config/models/: human_analysis.yaml
config/training/: segmentation.yaml
resources/data/2p_5p_Dataset_NFI/: 2p-5p PPF6C dataset_2024_Mixture generation.docx  2p_5p_hid_to_annotation.csv  best_ladder_paths.csv  best_ladder_paths_DTH.csv
resources/model/current_best_unet/: DNANet_UNet_checkpoint.pt  config.yaml
scripts/: select_ladder_for_images.py
tests/: conftest.py  test_allele_callers.py  test_utils.py
tests/data/: test_utils.py
tests/data/data_models/: test_base.py  test_dna_models.py  test_hid_dataset.py  test_hid_image.py
tests/data/parsing/: test_parse_annotations.py
tests/evaluation/segmentation/: test_allele_metrics.py  test_pixel_metrics.py
tests/resources/: ladder_alleles.csv  panel.xml
(+475 files in other folders)
